<resources>
    <string name="app_name">Crickly</string>
    <string name="special_bullet">  •  </string>
    <string name="vs">VS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="matches">Matches</string>
    <string name="t20sa">T20SA</string>
    <string name="bbc">BBL</string>
    <string name="t20i">T20I</string>
    <string name="over">Over</string>
    <string name="remaining_time">%s</string>
    <string name="countdown_finished">Countdown finished!</string>
    <string name="tab_layout">Tab layout</string>
    <string name="teamNamePrefix">Team: </string>
    <string name="seasonPrefix">Season: </string>
    <string name="ranking">Ranking</string>
    <string name="flag">Flag</string>
    <string name="name">Name</string>
    <string name="rank">Rank</string>
    <string name="match">Match</string>
    <string name="point">Point</string>
    <string name="rating">Rating</string>
    <string name="no_data_available">No Data Available</string>
    <string name="internet_not_available">Internet Not Available</string>
    <string name="live">Live</string>
    <string name="playing_xi">PLAYING XI</string>
    <string name="years">years</string>
    <string name="space"> </string>
    <string name="teams">Teams</string>
    <string name="career">Career</string>
    <string name="all_season">All Season</string>
    <string name="current_season">Current Season</string>
    <string name="calendar">Calendar</string>
    <string name="not_available">N/A</string>
    <string name="last_10_overs">Last 10 Overs</string>
    <string name="last_5_overs">Last 5 Overs</string>
    <string name="last_wicket">Last Wicket</string>
    <string name="partnership">Partnership</string>
    <string name="crr">CRR</string>
    <string name="key_stats">Key Stats</string>
    <string name="er">ER</string>
    <string name="w">W</string>
    <string name="r">R</string>
    <string name="m">M</string>
    <string name="o">O</string>
    <string name="bowler">Bowler</string>
    <string name="sr">SR</string>
    <string name="_4s">4s</string>
    <string name="_6s">6s</string>
    <string name="b">B</string>
    <string name="batsman">BatsMan</string>
    <string name="current_partnership">Current Partnership</string>
    <string name="draw">DRAW</string>
    <string name="dot_dot_dot">...</string>
    <string name="winning_prediction">Winning Prediction</string>
    <string name="no_internet_snack_bar">No internet! Please check you connection.</string>
    <string name="runs">Runs</string>
    <string name="innings">Innings</string>
    <string name="balls">Balls</string>
    <string name="high_score">High Score</string>
    <string name="s100">100\'s</string>
    <string name="s50">50\'s</string>
    <string name="average">Average</string>
    <string name="not_out">Not Out</string>
    <string name="s4">4\'s</string>
    <string name="s6">6\'s</string>
    <string name="strike_rate">Strike Rate</string>
    <string name="overs">Overs</string>
    <string name="economy_rate">Economy Rate</string>
    <string name="medians">Medians</string>
    <string name="wickets">Wickets</string>
    <string name="no_balls">No Balls</string>
    <string name="wides">Wides</string>
    <string name="four_wickets">Four Wickets</string>
    <string name="five_wickets">Five Wickets</string>
    <string name="ten_wickets">Ten Wickets</string>
    <string name="live_matches">Live Matches</string>
    <string name="top_news">Top News</string>
    <string name="info">INFO</string>
    <string name="series">Series</string>
    <string name="match_no">Match No.</string>
    <string name="local_team">Local Team</string>
    <string name="visitor_team">Visitor Team</string>
    <string name="status">Status</string>
    <string name="toss">Toss</string>
    <string name="venue">VENUE</string>
    <string name="stadium">Stadium</string>
    <string name="location">Location</string>
    <string name="capacity">Capacity</string>
    <string name="flood_light">Flood light</string>
    <string name="umpire">UMPIRE</string>
    <string name="first_umpire">First Umpire</string>
    <string name="second_umpire">Second Umpire</string>
    <string name="tv_umpire">TV Umpire</string>
    <string name="referee">Referee</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="result">Result</string>
    <string name="m_o_m">M.O.M</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="browse_team">Browse Team</string>
    <string name="browse_player">Browse Player</string>
    <string name="night_mode">Night Mode</string>
    <string name="shadow">Shadow</string>
    <string name="image">image</string>
    <string name="show_more">Show More</string>
    <string name="more">More</string>
    <string name="search">Search</string>

    <string name="current">current</string>
    <string name="all">all</string>
    <string name="batting_career">Batting Career</string>
    <string name="bowling_career">Bowling Career</string>
    <string name="all_teams">All Teams</string>
    <string name="current_teams">Current Teams</string>
    <string name="batting">batting</string>
    <string name="bowling">bowling</string>
</resources>