<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/_20sdp"
    android:elevation="@dimen/_3sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="T20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/card_background"
        app:layout_constraintTop_toBottomOf="@id/label_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_matches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/matches"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@id/label_type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/matches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_matches"
        app:layout_constraintTop_toTopOf="@id/label_matches"
        tools:text="125" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_overs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/overs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/matches" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/overs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_overs"
        tools:text="100" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_innings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/innings"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/overs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/innings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_innings"
        tools:text="123" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_econ_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/economy_rate"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/innings" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/econ_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_econ_rate"
        tools:text="3.33" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_medians"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/medians"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/econ_rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/medians"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_medians"
        tools:text="50" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_runs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/runs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/medians" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/runs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_runs"
        tools:text="1563" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_wickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/wickets"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/runs" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_wickets"
        tools:text="55" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_average"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/average"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/wickets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_average"
        app:layout_constraintTop_toTopOf="@id/label_average"
        tools:text="3.33" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_no_balls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/no_balls"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/average" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_balls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_no_balls"
        tools:text="255" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_strike_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/strike_rate"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/no_balls" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/strike_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_strike_rate"
        tools:text="23.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_wide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/wides"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/strike_rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_wide"
        tools:text="123" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_four_wickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/four_wickets"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/wide" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/four_wickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_four_wickets"
        tools:text="0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_five_wickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/five_wickets"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/four_wickets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/five_wickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_five_wickets"
        tools:text="0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_ten_wickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/ten_wickets"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/label_econ_rate"
        app:layout_constraintStart_toStartOf="@id/label_type"
        app:layout_constraintTop_toBottomOf="@+id/five_wickets" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ten_wickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/label_econ_rate"
        app:layout_constraintTop_toTopOf="@id/label_ten_wickets"
        tools:text="0" />


</androidx.constraintlayout.widget.ConstraintLayout>